<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutOrigin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/from"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/origin_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDestination"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/to"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutOrigin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/destination_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_view_departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/departure_time"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDestination"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner_departure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view_departure"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDestination" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ticket_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/spinner_departure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/text_view_ticket_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/your_ticket"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/text_view_ticket_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/from_ticket"
            app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_header"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_view_ticket_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_header"
            app:layout_constraintStart_toEndOf="@+id/text_view_ticket_from" />

        <TextView
            android:id="@+id/text_view_ticket_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/to_ticket"
            app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_from"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_view_ticket_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_from"
            app:layout_constraintStart_toEndOf="@+id/text_view_ticket_to" />

        <TextView
            android:id="@+id/text_view_ticket_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/departure_ticket"
            app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_to"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_view_ticket_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="00:00"
            app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_to"
            app:layout_constraintStart_toEndOf="@+id/text_view_ticket_departure" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/ok"
        app:layout_constraintTop_toBottomOf="@+id/spinner_departure"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>