<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewTicketFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_view_ticket_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginEnd="314dp"
            android:text="@string/your_ticket"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_ticket_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/from_ticket"
            app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_header"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_view_ticket_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_header"
            app:layout_constraintStart_toEndOf="@+id/text_view_ticket_from" />

        <TextView
            android:id="@+id/text_view_ticket_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/to_ticket"
            app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_from"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_view_ticket_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_from"
            app:layout_constraintStart_toEndOf="@+id/text_view_ticket_to" />

        <TextView
            android:id="@+id/text_view_ticket_departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/departure_ticket"
            app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_to"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_view_ticket_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="00:00"
            app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_to"
            app:layout_constraintStart_toEndOf="@+id/text_view_ticket_departure" />

        <Button
            android:id="@+id/btn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/retn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_time"
            app:layout_constraintVertical_bias="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>