<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_view_ticket_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/from_ticket"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_ticket_origin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view_ticket_from" />

    <TextView
        android:id="@+id/text_view_ticket_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/to_ticket"
        app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_from"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_ticket_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_from"
        app:layout_constraintStart_toEndOf="@+id/text_view_ticket_to" />

    <TextView
        android:id="@+id/text_view_ticket_departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/departure_ticket"
        app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_to"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_ticket_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="00:00"
        app:layout_constraintTop_toBottomOf="@+id/text_view_ticket_to"
        app:layout_constraintStart_toEndOf="@+id/text_view_ticket_departure" />

</androidx.constraintlayout.widget.ConstraintLayout>